Drop-down spacing fix

--- a/CSS/topstyle.css
+++ b/CSS/topstyle.css
@@ -48,7 +48,7 @@ h2 {
 
 .customSelect select {
 	color:#80E5FF;
-	width: 150px;
+	width: 190px;
 	height: 25px;
 	background: transparent;
 	border: none;
@@ -61,7 +61,7 @@ h2 {
 	overflow: hidden;
 	background: url(arrow.png) no-repeat 96% ;
 	background-size:15px 15px;
-	width: 120px;
+	width: 170px;
 }
 
 select option {
